--- a/My Philosophy/01. 为什么要记录:给人类文明一个样本.md
+++ b/My Philosophy/01. 为什么要记录:给人类文明一个样本.md
@@ -6,9 +6,9 @@
 
 在我们的生命中，有两种最根本的资源：
 
-**时间**，是我生命中确定的、不可再生的资源。我们无法驻足过去，也无法飞往未来，我们所能拥有的，只有当下。
+**时间**，是我生命中**确定的、不可再生的**资源。我们无法驻足过去，也无法飞往未来，我们所能拥有的，只有当下。
 
-**精力**，是可再生的资源，但资源量很有限。我们可以通过休息、睡眠、运动来恢复精力，但每天能够真正专注、高效工作的时间窗口是有限的。如何在有限的精力中，做最重要的事情，这是时间管理的核心问题。
+**精力**，是**可再生的，但资源量极有限**。它定义了我们每天**真正专注、高效工作的时间窗口。时间管理的核心，是如何在有限的精力窗口中，做最重要的事情。**
 
 ## 一个样本的意义
 
