Delete sections on time recording significance
Removed sections on the significance of time recording and advice for the future.

--- a/My Philosophy/02. 时间认知进化史.md
+++ b/My Philosophy/02. 时间认知进化史.md
@@ -10,8 +10,6 @@
 
 那种**时不我待的无力感**，从童年开始便伴随着我。
 
-### 追逐与等待的矛盾
-
 于是，我生活在一种关于时间的矛盾之中。
 
 **一方面，我拼命追逐时间：**
@@ -52,7 +50,8 @@
 但这样的流水账式记录，只是让我更焦虑：
 - 记录很费时间
 - 数据难以统计和分析  
-- 看不出规律，更无法改进
+- 只见行动,不见产出
+- 无法获得反馈
 
 ### 系统的需要
 
@@ -64,57 +63,3 @@
 的系统。
 
 ---
-
-##转变
-
-转变从两个人的影响开始，一个是柳比歇夫；一个是我的前辈Wilson。
-
-柳比歇夫是一位苏联的。。。
-
-## 记录的意义
-
-时间记录不是自我监控，不是苛责自己"又浪费了多少时间"。
-
-时间记录是：
-
-### 1. 自我认识的工具
-
-完全诚实地面对自己。只有真实记录，才能看清自己。
-
-你以为自己花了很多时间在重要的事情上，但数据可能会告诉你：你80%的时间都在处理琐事。
-
-### 2. 决策的依据
-
-当你知道自己每天真正的深度工作时间只有3小时，你就会更谨慎地选择做什么、不做什么。
-
-### 3. 成长的见证
-
-一年后、五年后、十年后，当你回看自己的时间分配，你会看到一个人的成长轨迹：从混乱到有序，从被动到主动，从焦虑到从容。
-
-### 4. 生命的档案
-
-每一条时间记录，都是生命真实存在过的证明。
-
-当生命走到尽头时，这些记录会告诉我：我没有虚度此生。
-
----
-
-## 写给未来的你
-
-如果你也读到了这份文档，也许你正在经历和我一样的困惑：
-
-- 感觉时间不够用
-- 不知道时间都去哪了  
-- 想要改变，但不知道从何开始
-
-我想告诉你：**开始记录，就是最好的开始。**
-
-你不需要完美的系统，不需要复杂的工具，你只需要开始记录今天的24小时。
-
-然后是明天的24小时。
-
-然后是后天的。
-
-慢慢地，你会找到属于自己的节奏，建立属于自己的系统。
-
-而那些被记录下来的时光，终将成为你最宝贵的财富。
