Update link for 精力管理 section

--- a/My Philosophy/00. 引言：Helen的时间哲学和个体样本.md
+++ b/My Philosophy/00. 引言：Helen的时间哲学和个体样本.md
@@ -10,7 +10,7 @@
 
 本仓库将聚焦于以下核心主题：
 
-* **[精力管理](精力管理.md)**：如何跳出基因宿命，通过周期匹配实现高产出。
+* **[精力管理](https://github.com/helenchen5165/lifestream/edit/main/My%20Philosophy/00.%20引言：Helen的时间哲学和个体样本.md#:~:text=摆脱“低能量”-,宿命,-的第一步)**：如何跳出基因宿命，成为一个高能量的人。
 * **[时间哲学](时间哲学.md)**：在有限的生命里，如何最大化丰富的人生体验。
 * **[系统实践](系统实践.md)**：我实际使用的工具、方法和评估系统。
 
