Add links to Helen's resources in introduction8

--- a/My Philosophy/00. 引言：Helen的时间哲学和个体样本.md
+++ b/My Philosophy/00. 引言：Helen的时间哲学和个体样本.md
@@ -18,6 +18,7 @@
 
 ## 🔗 探索更多 Helen 的世界
 
+* **时间管理工具**：[Lifestream](https://lifestream-od9x.vercel.app) (个人时间管理工具)
 * **雪球频道**：[Helen 的雪球](https://xueqiu.com/u/6022121262) (专注个人投资和财务思考)
 * **个人博客**：[heyhelen.art](https://heyhelen.art) (更深度的生活和艺术思考)
 
